# rfc_reader

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  rustfmt.toml
.cargo/: config.toml
src/: cache.rs  client.rs  lib.rs  main.rs  types.rs
src/ui/: app.rs  event.rs  guard.rs  logging.rs  mod.rs  toc_panel.rs
