[package]
name = "rfc_reader"
version = "0.1.0"
edition = "2024"
description = "A TUI based RFC viewer"
repository = "https://github.com/ozan2003/rfc_reader"
keywords = [
    "rust",
    "caching",
    "viewer",
    "table-of-contents",
    "tui",
    "argument-parsing",
    "offline-capable",
    "text-search",
    "http-request",
    "rfcs",
    "reader-ui",
    "request-for-comments",
    "command-line",
    "ratatui",
]
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
clap = "4.5.37"
crossterm = "0.29.0"
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
ratatui = "0.29.0"
regex = "1.11.1"
tempfile = "3.20.0"
textwrap = "0.16.2"
ureq = { version = "3.0.11", features = ["native-tls"] }

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false
incremental = false
