[package]
name = "rfc_reader"
version = "0.5.4"
edition = "2024"
description = "A TUI based RFC viewer"
repository = "https://github.com/ozan2003/rfc_reader"
keywords = [
    "rust",
    "caching",
    "viewer",
    "table-of-contents",
    "tui",
    "argument-parsing",
    "offline-capable",
    "text-search",
    "http-request",
    "rfcs",
    "reader-ui",
    "request-for-comments",
    "command-line",
    "ratatui",
]
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
clap = { version = "4.5.37", features = ["cargo"] }
# align with ratatui's crossterm version to not compile crossterm twice
# i'm only using event handling, no need for the serde, event-stream stuff
crossterm = { version = "0.28.1", default-features = false, features = [
    "events",
] }
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
ratatui = "0.29.0"
regex = "1.11.1"
textwrap = "0.16.2"
# remove rustls from dependencies since im using native-tls anyway
ureq = { version = "3.0.11", default-features = false, features = [
    "native-tls",
] }

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false
incremental = false

[lints.clippy]
correctness = { level = "forbid", priority = -1 }
perf = { level = "forbid", priority = -2 }
pedantic = { level = "deny", priority = -3 }
style = { level = "warn", priority = -4 }
complexity = { level = "warn", priority = -5 }
suspicious = { level = "warn", priority = -6 }

redundant-clone = { level = "warn", priority = -4 }
derive-partial-eq-without-eq = { level = "warn", priority = -5 }
unnecessary-struct-initialization = { level = "warn", priority = -6 }
redundant-pub-crate = { level = "warn", priority = -7 }
missing-const-for-fn = { level = "deny", priority = -8 }
uninlined-format-args = "allow"
